--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+Notify colleagues and friends when food has arrived through text or email (or both!).
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Ever go to get lunch and arrive back at the office to find someone has ordered
+pizza for everyone? Sucks right?
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Grub Tracker fixes that.
